crates/crochet_parser/src/snapshots/crochet_parser__tests__if_else.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"if (true) { 5 } else { 10 };\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..28,
                expr: Expr {
                    span: 0..27,
                    kind: IfElse(
                        IfElse {
                            cond: Expr {
                                span: 4..8,
                                kind: Lit(
                                    Bool(
                                        Bool {
                                            span: 4..8,
                                            value: true,
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                            consequent: Expr {
                                span: 12..13,
                                kind: Lit(
                                    Num(
                                        Num {
                                            span: 12..13,
                                            value: "5",
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                            alternate: Some(
                                Expr {
                                    span: 23..25,
                                    kind: Lit(
                                        Num(
                                            Num {
                                                span: 23..25,
                                                value: "10",
                                            },
                                        ),
                                    ),
                                    inferred_type: None,
                                },
                            ),
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
