crates/crochet_parser/src/snapshots/crochet_parser__tests__if_let-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\n            let bar = if (let {x: x is string} = foo) {\n                \"object\"\n            } else if (let [a is Array, _, ...rest] = foo) {\n                \"array\"\n            } else {\n                \"other\"\n            };              \n            \"#)"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 13..226,
                pattern: Pattern {
                    span: 17..20,
                    kind: Ident(
                        BindingIdent {
                            name: "bar",
                            mutable: false,
                            span: 17..20,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 23..225,
                        kind: IfElse(
                            IfElse {
                                cond: Expr {
                                    span: 27..53,
                                    kind: LetExpr(
                                        LetExpr {
                                            pat: Pattern {
                                                span: 31..47,
                                                kind: Object(
                                                    ObjectPat {
                                                        props: [
                                                            KeyValue(
                                                                KeyValuePatProp {
                                                                    key: Ident {
                                                                        span: 32..33,
                                                                        name: "x",
                                                                    },
                                                                    value: Pattern {
                                                                        span: 35..46,
                                                                        kind: Is(
                                                                            IsPat {
                                                                                ident: BindingIdent {
                                                                                    name: "x",
                                                                                    mutable: false,
                                                                                    span: 35..36,
                                                                                },
                                                                                is_id: Ident {
                                                                                    span: 40..46,
                                                                                    name: "string",
                                                                                },
                                                                            },
                                                                        ),
                                                                        inferred_type: None,
                                                                    },
                                                                    init: None,
                                                                    span: 32..46,
                                                                },
                                                            ),
                                                        ],
                                                        optional: false,
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            expr: Expr {
                                                span: 50..53,
                                                kind: Ident(
                                                    Ident {
                                                        span: 50..53,
                                                        name: "foo",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                consequent: Expr {
                                    span: 73..81,
                                    kind: Lit(
                                        Str(
                                            Str {
                                                span: 73..81,
                                                value: "object",
                                            },
                                        ),
                                    ),
                                    inferred_type: None,
                                },
                                alternate: Some(
                                    Expr {
                                        span: 101..225,
                                        kind: IfElse(
                                            IfElse {
                                                cond: Expr {
                                                    span: 105..139,
                                                    kind: LetExpr(
                                                        LetExpr {
                                                            pat: Pattern {
                                                                span: 109..133,
                                                                kind: Array(
                                                                    ArrayPat {
                                                                        elems: [
                                                                            Some(
                                                                                ArrayPatElem {
                                                                                    pattern: Pattern {
                                                                                        span: 110..120,
                                                                                        kind: Is(
                                                                                            IsPat {
                                                                                                ident: BindingIdent {
                                                                                                    name: "a",
                                                                                                    mutable: false,
                                                                                                    span: 110..111,
                                                                                                },
                                                                                                is_id: Ident {
                                                                                                    span: 115..120,
                                                                                                    name: "Array",
                                                                                                },
                                                                                            },
                                                                                        ),
                                                                                        inferred_type: None,
                                                                                    },
                                                                                    init: None,
                                                                                },
                                                                            ),
                                                                            Some(
                                                                                ArrayPatElem {
                                                                                    pattern: Pattern {
                                                                                        span: 122..123,
                                                                                        kind: Wildcard,
                                                                                        inferred_type: None,
                                                                                    },
                                                                                    init: None,
                                                                                },
                                                                            ),
                                                                            Some(
                                                                                ArrayPatElem {
                                                                                    pattern: Pattern {
                                                                                        span: 125..132,
                                                                                        kind: Rest(
                                                                                            RestPat {
                                                                                                arg: Pattern {
                                                                                                    span: 128..132,
                                                                                                    kind: Ident(
                                                                                                        BindingIdent {
                                                                                                            name: "rest",
                                                                                                            mutable: false,
                                                                                                            span: 128..132,
                                                                                                        },
                                                                                                    ),
                                                                                                    inferred_type: None,
                                                                                                },
                                                                                            },
                                                                                        ),
                                                                                        inferred_type: None,
                                                                                    },
                                                                                    init: None,
                                                                                },
                                                                            ),
                                                                        ],
                                                                        optional: false,
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                            expr: Expr {
                                                                span: 136..139,
                                                                kind: Ident(
                                                                    Ident {
                                                                        span: 136..139,
                                                                        name: "foo",
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                consequent: Expr {
                                                    span: 159..166,
                                                    kind: Lit(
                                                        Str(
                                                            Str {
                                                                span: 159..166,
                                                                value: "array",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                                alternate: Some(
                                                    Expr {
                                                        span: 204..211,
                                                        kind: Lit(
                                                            Str(
                                                                Str {
                                                                    span: 204..211,
                                                                    value: "other",
                                                                },
                                                            ),
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                ),
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                ),
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
