crates/crochet_parser/src/snapshots/crochet_parser__tests__jsx-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"<Foo>{bar}</Foo>\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..16,
                expr: Expr {
                    span: 0..16,
                    kind: JSXElement(
                        JSXElement {
                            span: 0..16,
                            name: "Foo",
                            attrs: [],
                            children: [
                                JSXExprContainer(
                                    JSXExprContainer {
                                        span: 5..10,
                                        expr: Expr {
                                            span: 6..9,
                                            kind: Ident(
                                                Ident {
                                                    span: 6..9,
                                                    name: "bar",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                            ],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
