crates/crochet_parser/src/snapshots/crochet_parser__tests__member_access-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"foo.bar();\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..10,
                expr: Expr {
                    span: 0..9,
                    kind: App(
                        App {
                            lam: Expr {
                                span: 0..7,
                                kind: Member(
                                    Member {
                                        obj: Expr {
                                            span: 0..3,
                                            kind: Ident(
                                                Ident {
                                                    span: 0..3,
                                                    name: "foo",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        prop: Ident(
                                            Ident {
                                                span: 4..7,
                                                name: "bar",
                                            },
                                        ),
                                    },
                                ),
                                inferred_type: None,
                            },
                            args: [],
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
