crates/crochet_parser/src/snapshots/crochet_parser__tests__member_access-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"p.x * p.x + p.y * p.y;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..22,
                expr: Expr {
                    span: 0..21,
                    kind: BinaryExpr(
                        BinaryExpr {
                            op: Add,
                            left: Expr {
                                span: 0..9,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: Mul,
                                        left: Expr {
                                            span: 0..3,
                                            kind: Member(
                                                Member {
                                                    obj: Expr {
                                                        span: 0..1,
                                                        kind: Ident(
                                                            Ident {
                                                                span: 0..1,
                                                                name: "p",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    prop: Ident(
                                                        Ident {
                                                            span: 2..3,
                                                            name: "x",
                                                        },
                                                    ),
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        right: Expr {
                                            span: 6..9,
                                            kind: Member(
                                                Member {
                                                    obj: Expr {
                                                        span: 6..7,
                                                        kind: Ident(
                                                            Ident {
                                                                span: 6..7,
                                                                name: "p",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    prop: Ident(
                                                        Ident {
                                                            span: 8..9,
                                                            name: "x",
                                                        },
                                                    ),
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                            right: Expr {
                                span: 12..21,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: Mul,
                                        left: Expr {
                                            span: 12..15,
                                            kind: Member(
                                                Member {
                                                    obj: Expr {
                                                        span: 12..13,
                                                        kind: Ident(
                                                            Ident {
                                                                span: 12..13,
                                                                name: "p",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    prop: Ident(
                                                        Ident {
                                                            span: 14..15,
                                                            name: "y",
                                                        },
                                                    ),
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        right: Expr {
                                            span: 18..21,
                                            kind: Member(
                                                Member {
                                                    obj: Expr {
                                                        span: 18..19,
                                                        kind: Ident(
                                                            Ident {
                                                                span: 18..19,
                                                                name: "p",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    prop: Ident(
                                                        Ident {
                                                            span: 20..21,
                                                            name: "y",
                                                        },
                                                    ),
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
